--- a/.jshintrc
+++ b/.jshintrc
@@ -13,7 +13,7 @@
   "noempty": true,
   "nonew": true,
   "plusplus": true,
-  "regexp": false, // These are only build/test scripts. Security is not an issue.
+  "regexp": false, // This is only a build script. Security is not an issue.
   "undef": true,
   "strict": true,
   "trailing": true,
